<resources>
    <string name="app_name">Reward App</string>
    <string name="app_name_drawer">Reward</string>
    <string name="app_name_drawer_tab">RewardTab</string>

    <string name="menu_offer_list">List</string>
    <string name="menu_point_exchange">Exchange</string>
    <string name="menu_point_history">History</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_debug">Debug</string>

    <string name="title_offer_detail">Offer Detail</string>

    <!-- 案件一覧のタブ名 -->
    <string name="tab_app_dl">App</string>
    <string name="tab_membership">Membership</string>
    <string name="tab_application">Application</string>
    <string name="tab_shopping">Shopping</string>

    <!-- 案件詳細画面 -->
    <string name="offer_detail_name">Name</string>
    <string name="offer_detail_point">Point</string>
    <string name="offer_detail_requirement">Requirement</string>
    <string name="offer_detail_requirement_detail">Detail</string>
    <string name="action_execute">Execute</string>

    <!-- ポイント履歴画面 -->
    <string name="tab_point_history">Point</string>
    <string name="tab_exchange_history">Exchange</string>
    <string name="table_header_datetime">Date</string>
    <string name="table_header_point">Point</string>
    <string name="table_header_point_history_detail">Detail</string>
    <string name="table_header_gift_name">Name</string>
    <string name="table_header_gift_code">Code</string>

    <!-- ポイント獲得通知 -->
    <string name="got_point">Got Point!</string>

    <!-- 現在のポイント表示部分 -->
    <string name="current_point_title">Current Point</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="point_unit">point</string>
    <string name="exchange">Exchange</string>
    <string name="query">Query</string>

    <!-- ダイアログメッセージ -->
    <string name="dialog_message_initializing">Initializing...</string>
    <string name="dialog_message_communicating">Communicating...</string>

    <string name="dialog_title_error_init">Initializing Error</string>
    <string name="dialog_message_error_init">Initializing error occurred. Please retry after checking network.</string>

    <string name="dialog_title_error_exchange">Exchange Error</string>

    <string name="query_mail_subject">Inquiry</string>
    <string name="query_mail_text">\n----------------------------------------\n</string>

    <!-- 汎用メッセージ (トーストやダイアログなどで使用する) -->
    <string name="error_communication">Communication error</string>

    <!-- ギフト券交換 -->
    <string name="message_confirm_exchange">Exchange OK?</string>

    <string name="message_complete_exchange">Complete to exchange.</string>
    <string name="message_complete_exchange_no_transit">Complete to exchange. Check for Exchange History.</string>

    <string name="message_restricted_one_day">Restricted to once exchange a day</string>
    <string name="message_out_of_stock">Out of stock</string>

    <string name="message_critical_server_error">Server error</string>

    <string name="message_sorry_inconvenience">Sorry for the inconvenience. Please wait for a while.</string>
    <string name="message_repair_work">Under repair. Please wait for a while.</string>
    <string name="message_please_retry">Please retry again.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabbed">TabbedActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_point_exchange">PointExchangeActivity</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>

    <string name="license">Copyright © 2014 Hawcons Gesture Stroke Icons by Yannick Lung</string>

</resources>
