<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AboutFragment">

    <TextView
        android:id="@+id/app_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textSize="24dp"/>

    <TextView
        android:id="@+id/version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name_text"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="10dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/build_info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/version_text"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="5dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/licence_text"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/build_info_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:text="@string/license"/>

    <Button
        android:id="@+id/query_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/licence_text"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="23dp"
        android:text="@string/query"/>
</RelativeLayout>
