<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.OfferDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".OfferDetailFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/app_disp_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:background="@color/grey200"
                android:paddingRight="65dp">  <!-- ポイント表示分右をあけておく -->

                <ImageView
                    android:id="@+id/icon_image"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_reload_grey600_24dp"/>

                <TextView
                    android:id="@+id/name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_margin="3dp"
                    android:paddingLeft="10dp" />
            </LinearLayout>

            <!-- 成果条件 -->
            <LinearLayout
                android:id="@+id/requirement_text_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:layout_below="@+id/app_disp_area">

                <TextView
                    android:id="@+id/textView2"
                    android:textSize="14dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/offer_detail_requirement"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:padding="3dp"
                    android:textColor="@color/theme500" />

                <TextView
                    android:id="@+id/requirement_text"
                    android:textSize="14dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </LinearLayout>

            <!-- 条件詳細 -->
            <LinearLayout
                android:id="@+id/requirement_detail_text_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/requirement_text_area"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:textSize="14dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:textSize="14dp"
                    android:layout_height="wrap_content"
                    android:text="@string/offer_detail_requirement_detail"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:padding="3dp"
                    android:textColor="@color/theme500" />

                <TextView
                    android:id="@+id/requirement_detail_text"
                    android:textSize="14dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </LinearLayout>

            <!-- ポイント表示 -->
            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:orientation="vertical"
                android:paddingTop="0dp"
                android:layout_alignParentRight="true"
                android:layout_above="@id/requirement_text_area">

                <TextView
                    android:id="@+id/point_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:gravity="center|bottom"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/theme500" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|top"
                    android:text="@string/point_unit"
                    android:textColor="@color/theme500"
                    android:textSize="12sp"/>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/execute_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/corner_round_item_offer_btn"
                android:text="@string/action_execute"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/detail_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/grey200"
                android:padding="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
