<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.OfferDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".OfferDetailFragment"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

        <LinearLayout
            android:id="@+id/app_disp_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/grey200">

            <ImageView
                android:id="@+id/icon_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_reload_grey600_24dp"/>

            <TextView
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_margin="3dp"
                android:paddingLeft="10dp"/>
        </LinearLayout>


            <LinearLayout
                android:id="@+id/requirement_text_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:layout_below="@+id/app_disp_area">

                <TextView
                    android:id="@+id/textView2"
                    android:textSize="14dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/offer_detail_requirement"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:textColor="@color/theme500" />

                <TextView
                    android:id="@+id/requirement_text"
                    android:textSize="14dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/requirement_text_area"
                android:orientation="horizontal"
                android:id="@+id/requirement_detail_text_area"
                android:textSize="14dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:textSize="14dp"
                    android:layout_height="wrap_content"
                    android:text="@string/offer_detail_requirement_detail"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:padding="3dp"
                    android:textColor="@color/theme500" />

                <TextView
                    android:id="@+id/requirement_detail_text"
                    android:textSize="14dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:background="@drawable/offer_list_point_bg"
                android:paddingTop="20dp"
                android:layout_alignParentRight="true"

                android:layout_above="@+id/requirement_detail_text_area">
                <TextView
                    android:id="@+id/point_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_margin="3dp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/grey200"
                android:padding="10dp"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall"/>



            <Button
                android:id="@+id/execute_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/action_execute"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
